ZON-1330: sharing: refine styles & add active state

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -173,7 +173,7 @@
 =drop_icon()
 	display: inline-block // needed for "rotate on hover"
 	margin-left: $tiny
-	content: "\25BE" // Unicode for ▾
+	content: "\25BE" // ▾ = black down-pointing small triangle
 
 /* mixins for navigation/header */
 
