ZON-1541: Make some stuff work again and break other stuff

--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -1,5 +1,5 @@
-<div class="cp-area cp-area--parquet" id="parquet">
-    <div class="parquet-row parquet-row--spektrum" id="parquet-spektrum">
+<div class="cp-area cp-area--parquet">
+    <div class="parquet-row parquet-row--spektrum">
         {%- if parquet_position -%}
             {% set track_slug = 'hp.centerpage.teaser.parquet.' + parquet_position %}
         {%- endif -%}
