ZON-1541: Repair some tests and fix layout modifiers

--- a/src/zeit/web/site/templates/inc/region/default.html
+++ b/src/zeit/web/site/templates/inc/region/default.html
@@ -1,4 +1,4 @@
-<div class="{{ 'cp-region' | with_mods(region.layout) }}">
+<div class="{{ 'cp-region' | with_mods(region.layout.id) }}">
     {% for area in region.values() %}
         {%- include ["zeit.web.site:templates/inc/area/" + area.layout.id + ".html",
                      "zeit.web.site:templates/inc/parquet/" + area.layout.id + ".html",
