--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,4 +1,4 @@
-<div class="{{ 'cp-area' | with_mods(area.layout, area.width | area_width) }}">
+<div class="{{ 'cp-area' | with_mods(area.layout.id, area.width | area_width) }}">
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() -%}
         {% set teaser = module | first_child %}
