Fix: Sass: use correct syntax for transitions
We haven't been fully consistent in our use.
The properties should be comma-separated,
according to the Compass docs

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -12,7 +12,7 @@
 =default-article-textlink
 	a
 		border-bottom: 1px solid rgba($color-link--default, .5)
-		+transition-property(border-bottom-color color)
+		+transition-property(border-bottom-color, color)
 		+transition-duration(.2s)
 
 		&:focus
