--- a/sass/web.site/modules/article/_article-interactions.sass
+++ b/sass/web.site/modules/article/_article-interactions.sass
@@ -15,7 +15,7 @@
 			+drop_icon()
 	&__items
 		// we animate both margin & max-height so it looks smoother
-		+transition-property(margin max-height)
+		+transition-property(margin, max-height)
 		+transition-duration(0.5s)
 		+transition-timing-function(ease)
 		max-height: 0 // animated
