--- a/sass/web.site/modules/centerpage/_snapshot.sass
+++ b/sass/web.site/modules/centerpage/_snapshot.sass
@@ -21,7 +21,7 @@
 	display: block // needed for working transition
 	opacity: 0.1
 	+filter(blur(10px))
-	+transition-property(filter opacity)
+	+transition-property(filter, opacity)
 	+transition-duration(2.5s)
 	+transition-timing-function(ease-out)
 	&--uncovered
