--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,6 +1,6 @@
 <div class="{{ 'cp-area' | with_mods(area | get_layout, area.width | area_width) }}">
     {% block before_module_list %}{% endblock %}
-    {% for module in area.values() -%}
+    {% for module in area.values() if module | first_child -%}
         {% set teaser = module | first_child %}
         {% set index = loop.index %}
         {% block before_module_include scoped %}{% endblock %}
