--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -1,8 +1,6 @@
 .comment
-	+restore-side-padding
+	padding: remify($junior--px) $page-padding remify($twice--px) $page-padding
 	border-top: 1px solid $zon_light_grey
-	padding-top: remify($junior--px)
-	padding-bottom: remify($twice--px)
 	position: relative
 
 	+respond-min($break-desktop-min)
