--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -85,12 +85,12 @@
 
 
 .comment--indented
-	box-shadow: inset 28px 0 0 0 $zon_lighter_grey
+	box-shadow: inset remify(28px) 0 0 0 $zon_lighter_grey
 	padding-left: remify($large--px)
 
 	+respond-min($break-desktop-min)
 		box-shadow: none
-		padding-left: $page-padding
+		padding-left: remify(80px)
 		padding-right: 0
 		margin: remify(0 160px)
 
@@ -105,8 +105,8 @@
 		content: ' '
 		left: remify(70px)
 		position: absolute
-		+respond-min($break-tablet-min)
-			left: remify(34px)
+		+respond-min($break-desktop-min)
+			left: remify(94px)
 	&:before
 		border-bottom-color: $zon_light_grey
 		top: remify(-10px)
