ZON-1535: comments: Z-badge for zon-author

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -116,11 +116,18 @@
 
 
 // icons
+.icon-zon-author-badge
+	+inline-block
+	background-position: top remify(15px) center
+	height: remify(50px)
+	width: remify(16px)
+	margin-right: remify(6px)
+
 .icon-comment-reactions-reply,
 .icon-comment-reactions-report,
 .icon-comment-reactions-recommend
 	+background-size(contain)
-	display: inline-block
+	+inline-block
 	height: 1rem
 	opacity: 0.5
 	width: 1.2rem
