--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -58,11 +58,9 @@
 			margin: 0 0 0.6667em 0
 
 	&__reactions
-		display: block
 		line-height: 1.5
-		margin-top: remify(30px)
-		+respond-min($break-desktop-min)
-			width: remify(320px)
+		+respond-min($break-tablet-min)
+			text-align: right
 
 	&__reaction,
 	&__date-anchor
@@ -73,12 +71,11 @@
 		font-size: remify(12px)
 		letter-spacing: $zon-letter-spacing-s
 
-	&__reaction,
+	&__reaction
 		+inline-block(top)
-		margin-left: 1rem
+		margin-left: remify(16px)
 		+respond-min($break-phablet-min)
-			margin-left: 1.5rem
-
+			margin-left: remify(24px)
 		&:first-child
 			margin-left: 0
 
