ZON-1549: Fix typo in SASS function

--- a/sass/_functions.sass
+++ b/sass/_functions.sass
@@ -98,7 +98,7 @@ $rem-to-px-base: 16 !default
 		@else
 			@warn 'There is currently no unit conversion for #{$unit}'
 
-	@return $list()
+	@return $list
 
 /**
  * ENDBLOCK: convert rem to pixels for older browsers
