ZON-1628: add vertical space and clean up vars

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -64,8 +64,10 @@ $color-button-bg--disabled: $white
 $zon-bar-height-phablet-px: 54px
 $zon-bar-height-phablet: em($zon-bar-height-phablet-px)
 
-// margins
+// margins and paddings
 $page-padding: remify(20px)
+$cp-padding: remify(10px)
+$vertical-space: remify(20px)
 $video-title-padding--px: 15px
 $video-title-padding: remify($video-title-padding--px)
 $article-gutter-desktop: remify( ($max-page-width - $medium-content-width) / 2 )
