--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -1,11 +1,18 @@
-$cp-padding: em(10px)
+// RAM vertical space rules
+// Regions have vertical space as margin-bottom of $vertical-space
+// Areas have no vertical space (and as they float don't collapse margins of children)
+// Modules have vertical space on top and bottom as padding
+// 
+// $vertcal-space * 2 is the vertical gutter between two elements (rule of thumb)
 
 .cp-region
+	margin-bottom: $vertical-space
 	padding: 0 $cp-padding
 	+pie-clearfix
 	&--parquet-large,
 	&--parquet-regular,
 	&--parquet-spektrum
+		margin-bottom: 0
 		padding: 0
 
 .cp-area
