ZON-1626: Add vars to modules

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -6,14 +6,14 @@
 	+pie-clearfix
 	border-top: 1px solid $zon_light_grey
 	margin: 0 -($page-padding)
-	padding: $petite $page-padding
+	padding: $vertical-space $page-padding
 	&:nth-of-type(1)
 		border-top: none
 	+respond-min($break-tablet-min)
 		border-bottom: none
 		border-top: none
 		margin: 0
-		padding: $petite 0
+		padding: $vertical-space 0
 
 %teaser-small-media-placement
 	position: relative
