--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -11,7 +11,7 @@ $teaser-column-mobile-image-size: 80px
 	background: $color-column-background
 	border-top: none
 	padding: $petite
-	margin: em(40px) (-$page-padding) 0 (-$page-padding)
+	margin: em(40px) (-$page-padding) $vertical-space (-$page-padding)
 	position: relative
 	box-shadow: inset 0 $teaser-column-shadow 0 0 $color-column-shadow
 	+respond-min($break-tablet-min)
@@ -19,7 +19,7 @@ $teaser-column-mobile-image-size: 80px
 		margin-right: 0
 	+respond-min($break-desktop-min)
 		box-shadow: none
-		margin: $petite 0 $petite 0
+		margin: $petite 0 $vertical-space 0
 		min-height: remify(250px)
 		padding: $petite $petite $petite ($teaser-image-desktop-width + $petite)
 	&__media
