ZON-1626: Finetune vertical space in modules

--- a/sass/web.site/modules/teaser/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-parquet-large.sass
@@ -1,8 +1,8 @@
 .teaser-parquet-large
 	@extend %teaser
-	padding: remify($petite--px) remify(40px)
+	padding: remify($petite--px) remify(40px) $vertical-space remify(40px)
 	+respond-min($break-tablet-min)
-		padding: remify(0 0 $petite--px 0)
+		padding: remify(0 0 40px 0)
 
 	&__container
 		display: table-cell
