--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,14 +1,18 @@
 <div class="{{ 'cp-area' | with_mods(area | get_layout, area.width | area_width) }}">
+    {% set area_layout = area.width | area_width %}
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() if module | first_child -%}
         {% set teaser = module | first_child %}
         {% set index = loop.index %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/module/" + module | get_layout | hide_none + ".html",
+            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout | hide_none, area_layout),
+             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout | hide_none, area_layout),
+             "zeit.web.site:templates/inc/module/" + module | get_layout | hide_none + ".html",
              "zeit.web.site:templates/inc/teaser/" + module | get_layout | hide_none + ".tpl",
              "zeit.web.site:templates/inc/teaser/default.tpl"] %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
     {% block after_module_list %}{% endblock %}
 </div>
+
