ZON-1238: Add zon small onethird css

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -4,8 +4,9 @@ $base-line-height: 1.5
 $headline-line-height: 1.4
 $meta-line-height: 1.7
 
-// breakpoints
+// breakpoints (in 'em' for purpose)
 $break-phablet-min: em(520px)
+$break-phablet-max: em(767px)
 $break-tablet-min: em(768px)
 $break-desktop-min: em(980px)
 
