--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -24,6 +24,7 @@
 // teaser
 @import "modules/teaser/teaser"
 @import "modules/teaser/teaser-small"
+@import "modules/teaser/teaser-small-onethird"
 @import "modules/teaser/teaser-large"
 @import "modules/teaser/teaser-series"
 @import "modules/teaser/teaser-column"
