--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -2,14 +2,24 @@
 	margin-left: (-$page-padding)
 	margin-right: (-$page-padding)
 	margin-top: 4rem
-	&__head,
-	&__notice
+	&__head
 		border-top: 2px solid $zon-seashell
-		display: block
+		padding: remify(32px)
+		text-align: center
+		+respond-min($break-phablet-min)
+			+display-flex // flexbox
+			+justify-content(space-between) // flexbox
+		+respond-min($break-tablet-min)
+			padding: remify(30px 16px)
+		+respond-min($break-desktop-min)
+			padding: remify(40px 160px)
+	&__count
 		font-size: remify(20px)
 		font-weight: bold
-		margin: 1rem 0
-		padding: 1rem
-		text-align: center
-		+respond-min($break-desktop-min)
-			padding: remify($medium--px 160px)
+		padding-top: remify(24px)
+		line-height: 1.0
+	&__cta
+		+zon-button-light
+		&:after
+			content: '\25B8' // ▸ = Black right-pointing small triangle
+			margin-left: 3px
