Fix: use inline-block mixin in zon-button mixin

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -214,11 +214,11 @@
 		vertical-align: $vertical-align
 
 =zon-button($background-color, $hover-background-color, $border-color, $hover-border-color, $color, $hover-color, $visited-color, $font-size: remify(13px), $margin: remify(14px 6px), $padding: remify(10px 18px))
+	+inline-block(none)
 	background-color: $background-color
 	border-radius: 5px
 	border: 2px solid $border-color
 	color: $color
-	display: inline-block
 	font-size: $font-size
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
