Fix pagination spacing

--- a/sass/web.site/modules/_pagination.sass
+++ b/sass/web.site/modules/_pagination.sass
@@ -1,6 +1,7 @@
 .pagination
     font-size: remify(14px)
-    margin: remify(50px) 0 0
+    margin-top: remify(50px)
+    margin-bottom: remify(20px)
     a
         // normal, hover, active, visited, focus
         +link-colors($zon_grey, $color-link--hover, $color-link--active, $zon_grey, $color-link--focus)
