ZON-1685: param 9 first published empty
… is not a bug, because these pages we're unpublsihed. Added comment with complete pubdate or "not published yet" in case of.

--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -37,7 +37,7 @@
             6: "{{ serie }}", // Cluster
             7: "{{ request.path_info | substring_from('/') }}", // doc-path
             8: "{{ view.banner_channel | lower }}", // Banner-Channel
-            9: "{{ date }}" // First Published
+            9: "{{ date }}" // {{ view.date_first_released | default("not published yet") }}
         };
 
         {% if view.type == "article" -%}
