ZON-1690: noscript always return desktop.site as cp 12

--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -90,7 +90,7 @@
             view.banner_channel | lower,
             "",
             "",
-            ""
+            "desktop.site"
         ) }}{% endif -%}" />
     </div>
 </noscript>
