--- a/src/zeit/web/core/templates/post_test_comments.html
+++ b/src/zeit/web/core/templates/post_test_comments.html
@@ -27,7 +27,7 @@
                     <label for='pid'>Antwort auf (pid)</label>
                 </div>
                 <div>
-                    <select id='action' type='text' name='action'>
+                    <select id='action' name='action'>
                         <option value="comment">Kommentieren</option>
                         <option value="report">Bedenklich melden</option>
                         <option value="recommend">Empfehlen</option>
