--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -99,7 +99,7 @@
                         </a>
                         <a  class="comment__date-anchor" href="#cid-{{ comment.cid }}">
                         #{{ loop.index }} &nbsp;/&nbsp; {{ comment.timestamp | format_date_ago() }}
-                            {% if comment.is_recommended %}
+                            {% if comment.recommendations %}
                             {# Special-Char: &#9733; = Black Star #}
                             <span class="comment__recommendations">
                                 {{ comment.recommendations }} &#9733;
