--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -49,7 +49,7 @@
             4: "{{ view.ranked_tags_list | lower }}", // Schlagworte
             5: "{{ view.date_last_modified }}", // Last published
             6: "{{ view.text_length }}", // Textlänge
-            7: "{{ view.source | hide_none | lower }}", // Quelle
+            7: "{{ view.news_source | hide_none | lower }}", // Quelle
             8: "{{ view.product_id | hide_none | lower }}", // Product-Id
             9: "{{ view.banner_channel | lower }}", // Banner-Channel
             10: "{%- if view.context.advertising_enabled %}yes{% endif -%}", // Banner aktiv?
@@ -85,7 +85,7 @@
             view.ranked_tags_list | lower,
             view.date_last_modified,
             view.text_length,
-            view.source | hide_none | lower,
+            view.news_source | hide_none | lower,
             view.product_id | hide_none | lower,
             view.banner_channel | lower,
             "",
