ZON-1643: Rename icon class

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -140,7 +140,7 @@
 
 
 // icons
-.icon-zon-author-badge
+.icon-comment-zon-author-badge
 	+inline-block(text-bottom)
 	height: remify(18px)
 	width: remify(16px)
