--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -92,7 +92,7 @@
                     {% endif %}
                     <div class="comment__meta">
                         {% if comment.is_author %}
-                        <span class="icon-zon-author-badge"></span>
+                        <span class="icon-comment-zon-author-badge"></span>
                         {% endif %}
                         <a class="comment__name" href="{{ comment.userprofile_url }}">
                             {{ comment.name | e }}
